--- a/my-site/config.yaml
+++ b/my-site/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://Wayde2112.github.io"
+baseURL: "https://Wayde2112.github.io/portfolio"
 languageCode: "en-us"
 title: "My Portfolio"
 theme: hugo-profile
